--- a/public/miss-bug-starter-react/assets/style/cmps/Home.css
+++ b/public/miss-bug-starter-react/assets/style/cmps/Home.css
@@ -1,7 +1,12 @@
 
+
+
 .home {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: red;
+    flex: 1;
 }
+
