--- a/public/miss-bug-starter-react/assets/style/main.css
+++ b/public/miss-bug-starter-react/assets/style/main.css
@@ -9,12 +9,13 @@
 @import "base/forms.css";
 
 /* Components */
+@import "cmps/Home.css";
 @import "cmps/AppHeader.css";
 @import "cmps/UserMsg.css";
-@import "cmps/ToggleButton.css";
+/* @import "cmps/ToggleButton.css"; */
 
-@import "cmps/CarFilter.css";
-@import "cmps/CarList.css";
-@import "cmps/CarPreview.css";
-@import "cmps/CarDetails.css";
-@import "cmps/CarEdit.css";
+@import "cmps/BugFilter.css";
+@import "cmps/BugList.css";
+@import "cmps/BugPreview.css";
+@import "cmps/BugDetails.css";
+@import "cmps/BugEdit.css";
