--- a/public/miss-bug-starter-react/assets/style/cmps/BugList.css
+++ b/public/miss-bug-starter-react/assets/style/cmps/BugList.css
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 15px;
-    
+
 }
 
 .bug-list li {
@@ -13,18 +13,31 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    background-color: var(--clr1bg);
-    border-radius: 72% 28% 76% 24% / 31% 69% 31% 69% ;
+    /* background-color: var(--gray2); */
+    background-color: var(--nice-white);
+    border-radius: 72% 28% 76% 24% / 31% 69% 31% 69%;
     /* background-image: linear-gradient(to top, #d7dcc7, #c3d9c6, #aed5ca, #9dcfd3, #97c7db, #98c4db, #9ac2da, #9cbfd9, #9dc2d4, #a1c4ce, #a7c6ca, #afc7c6); */
+    transition: 500ms;
 
-   
+
 }
 
-.remove-bug{
+.bug-list li:hover{
+    background-color: var(--clr2bg);
+    cursor: pointer;
+}
+
+.remove-bug {
     position: absolute;
     top: -18px;
     right: 20px;
 
     border-radius: 50%;
     border: 1px solid var(--clr1bg);
+    background-color: var(--nice-white);
+}
+
+.remove-bug:hover {
+    background-color: var(--clr2bg);
+
 }
