--- a/public/miss-bug-starter-react/assets/style/cmps/BugPreview.css
+++ b/public/miss-bug-starter-react/assets/style/cmps/BugPreview.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: red;
+    
 }
 
 .bug-preview h4 {
@@ -16,13 +16,14 @@
     max-width: 100px;
 }
 
-body {
+/* body {
     height: 100vh;
     background-image: linear-gradient(to right top, #a8b9d3, #b7c0d4, #c4c7d5, #cfcfd6, #d8d8d8);
     background-size: cover;
     background-repeat: no-repeat;
 }
-
+*/
 main{
     margin: 20px;
-}
+    /* background-color: var(--clr1bg); */
+} 
